--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-pandas
-numpy
-scikit-learn
-joblib
-streamlit
-matplotlib
-seaborn
+# Core Dependencies
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+
+# Machine Learning
+scikit-learn>=1.3.0
+joblib>=1.3.0
+
+# Data Processing
+python-dateutil>=2.8.0
+
+# Optional: For enhanced features
+plotly>=5.17.0
+altair>=5.0.0
+
+# Development (optional)
+pytest>=7.0.0
+black>=23.0.0
+pylint>=2.0.0
